--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -31,7 +31,7 @@
 .accordion__title {
 	font-size: 1.6rem;
 	text-transform: uppercase;
-	padding: 40px 0 30px 35px;
+	padding: 40px 55px 30px 35px;
 	font-weight: 700;
 	box-shadow: 1px 2px 5px 1px rgba(0,0,0,0.05);
 	cursor: pointer;
