--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -9,15 +9,33 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	margin-top: 30px;
-	margin-bottom: 50px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
+
+	@include md {
+		flex-direction: row;
+		margin-top: 30px;
+		margin-bottom: 50px;
+	}
 	li {
 		margin: 0;
 		padding: 0;
 		color: $primary-color;
 		font-size: 1.8rem;
+		display: flex;
+		text-align: left;
+		align-items: center;
+		align-content: center;
+		margin-bottom: 20px;
+
+		@include md {
+			display: block;
+			margin-bottom: 0;
+			text-align: center;
+		}
 		a {
 			color: $primary-color;
 		}
@@ -30,11 +48,17 @@
 	height: 60px;
 	border-radius: 30px;
 	border: 1px solid #cdcdcd;
-	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	align-content: center;
 	justify-content: center;
-	margin-bottom: 16px;
+	margin-right: 20px;
+
+	@include md {
+		margin-right: 0;
+		margin: 0 auto;
+		margin-bottom: 16px;
+		float: none;
+	}
 }
