--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -5,8 +5,18 @@
 	padding: 45px 0 50px;
 	p {
 		color: white;
-		font-size: 2.4rem;
+		font-size: 2rem;
 		font-weight: 300;
 		margin-bottom: 30px;
+		@include sm {
+			padding: 0;
+			font-size: 2.4rem;
+		}
+
+		br {
+			@include sm {
+				display: none;
+			}
+		}
 	}
 }
