--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,21 +1,76 @@
 // Nav
 
 .nav {
+	display: none;
+	transform: translate3d(0,-100%,0);
+	position: fixed;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	background: rgba(255,255,255,1);
+	align-content: center;
+	align-items: center;
+  	justify-content: center;
+  	transition: all linear 0.2s;
+
+	@include md {
+		width: auto;
+		display: block;
+		height: auto;
+		position: static;
+		display: block;
+		background: none; 
+		transform: translate3d(0,0,0);
+	}
+
+	&.active {
+    	transform: translate3d(0,0,0);
+	}
 	ul {
 		list-style: none;
 		padding: 0;
 		margin: 0;
 		display: inline-block;
+		margin-bottom: 30px;
+		margin-top: 30px;
+
+		@include md {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 		
 		li {
-			display: inline-block;
-			margin-right: 40px;
+			display: block;
+			text-align: center;
+			margin-bottom: 20px;
+			@include md {
+				margin-bottom: 0;
+				margin-right: 10px;
+				text-align: left;
+				display: inline-block;
+			}
+
+			@include xl {
+				margin-right: 40px;
+			}
 			a {
 				color: black;
 				text-decoration: none;
 				text-transform: uppercase;
 				font-weight: 700;
+				font-size: 1.7rem;
 				transition: all linear 0.1s;
+				@include md {
+					font-size: 1.5rem;
+				}
+				@include xl {
+					font-size: 1.7rem;
+				}
 				&:hover {
 					color: $primary-color;
 				}
@@ -29,8 +84,13 @@
 						width: 9px;
 						height: 2px;
 						background: $primary-color;
-						left: 0;
+						left: 50%;
 						bottom: -7px;
+						transform: translateX(-50%);
+						@include md {
+							left: 0;
+							transform: translate(0,0);
+						}
 					}
 				}
 			}
