--- a/src/scss/components/_speakers-carousel.scss
+++ b/src/scss/components/_speakers-carousel.scss
@@ -4,10 +4,13 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	margin-bottom: 80px;
 	outline: none;
 	overflow: hidden;
 	position: relative;
+
+	@include sm {
+		margin-bottom: 80px;
+	}
 
 	.flickity-slider {
 	  transform: none !important;
@@ -17,12 +20,25 @@
 		position: absolute;
 		z-index: 100;
 		&.previous {
-			top: 0;
-			right: 0;
+			top: 280px;
+			left: 0;
+			@include sm {
+				top: 0;
+				right: 0;
+				left: auto;
+			}
 		}
 		&.next {
-			bottom: 0;
+			top: 280px;
 			right: 0;
+
+			@include sm {
+				top: 80px;
+			}
+			@include md {
+				bottom: 0;
+				top: auto;	
+			}
 		}	
 	}
 }
@@ -41,15 +57,39 @@
 	}
 }
 
+.speakers-carousel__img {
+	text-align: center;
+	img {
+		width: 245px;
+		@include sm {
+			width: auto;
+			max-width: 100%;
+		}
+	}
+}
+
 .speakers__wrapper {
 	align-items: center;
 	display: flex;
 }
 
 .speakers__content {
-	padding-left: 50px;
+	margin-top: 30px;
+	padding: 0 20px;
+	@include sm {
+		padding: 0;
+	}
+
+	@include lg {
+		margin-top: 0;
+		padding-left: 50px;
+	}
 	h3 {
 		margin-bottom: 20px;
+		text-align: center;
+		@include sm {
+			text-align: left;
+		}
 		.speakers__position {
 			font-size: 1.8rem;
 			color: $primary-color;
@@ -67,11 +107,19 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	text-align: center;
+	@include sm {
+		text-align: left;
+	}
 	li {
 		margin: 0;
 		padding: 0;
 		display: inline-block;
-		margin-right: 12px;
+		margin: 0 6px;
+		@include sm {
+			margin: 0;
+			margin-right: 12px;	
+		}
 		a {
 			display: block;
 			width: 60px;
