--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -8,21 +8,32 @@ body, html {
 }
 
 h1 {
-	font-size: 7.2rem;
+	font-size: 4rem;
 	text-transform: uppercase;
 	padding-bottom: 10px;
 	position: relative;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
+	line-height: 45px;
+	@include sm {
+		line-height: 80px;
+		font-size: 7.2rem;
+		margin-bottom: 40px;
+	}
 }
 
 h2 {
 	position: relative;
-	font-size: 4.8rem;
+	font-size: 3rem;
 	margin-bottom: 40px;
 	text-transform: uppercase;
 	padding-bottom: 15px;
+	@include sm {
+		font-size: 4.8rem;
+	}
 	&.big {
-		font-size: 6rem;
+		@include lg {
+			font-size: 6rem;
+		}
 	}
 }
 
@@ -47,8 +58,13 @@ h1,h2 {
 
 h3 {
 	text-transform: uppercase;
-	font-size: 3.6rem;
-	margin-bottom: 60px;
+	font-size: 2.8rem;
+	margin-bottom: 30px;
+
+	@include sm {
+		font-size: 3.6rem;
+		margin-bottom: 60px;
+	}
 }
 
 p {
@@ -57,4 +73,12 @@ p {
 	margin-bottom: 45px;
 	line-height: 30px;
 	font-weight: 300;
+}
+
+
+img {
+	max-width: 100%;
+	@include sm {
+		max-width: none;
+	}
 }
