--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@ $enable-grid-classes:       true;
 @import './bootstrap/_reboot.scss';
 @import './bootstrap/_grid.scss';
 
-// @import 'components/_fonts.scss';
+@import 'components/_fonts.scss';
 @import 'components/_media-queries.scss';
 @import 'components/_typography.scss';
 @import 'components/_layout.scss';
