--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -9,10 +9,6 @@
 	text-transform: uppercase;
 	transition: all linear 0.1s;
 
-	@include sm {
-		padding: 8px 20px 6px;
-	}
-
 	&:hover,&:active,&:focus {
 		color: white;
 		background: $primary-color;
@@ -24,14 +20,16 @@
 		color: white;	
 		font-weight: 400;
 		border-color: white;
-	
-		@include sm {
-			padding: 8px 24px 6px;
-		}
 
 		&:hover,&:active,&:focus {
 			color: $primary-color;
 			background: white;
+		}
+	}
+
+	&--small {
+		@include sm {
+			padding: 8px 20px 6px;
 		}
 	}
 }
