--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,16 +1,16 @@
 // Footer
 
 .footer {
+	padding: 60px 0 50px;
 	background: $primary-color;
-	padding: 45px 0 50px;
-	p {
+	text-align: center;
+	a {
 		color: white;
+		text-align: center;
 		font-size: 2rem;
 		font-weight: 300;
-		margin-bottom: 30px;
-		@include sm {
-			padding: 0;
-			font-size: 2.4rem;
+		@include sm { 
+			font-size: 2rem;
 		}
 
 		br {
