--- a/src/scss/components/_gain-list.scss
+++ b/src/scss/components/_gain-list.scss
@@ -2,27 +2,26 @@
 
 .gain-list {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	overflow: auto;
+	flex-wrap: wrap;
 	padding: 20px 0;
 	@include md {
 		padding: 0;
 		margin-top: 60px;
+		justify-content: space-between;
 	}
 
 	@include lg {
-		overflow: visible;
 		padding: 0;
 		margin-top: 60px;
 	}
 	li {
-		margin: 0;
+		margin: 0 5px 10px;
 		padding: 0;
-		flex: 0 0 125px;
-		margin-right: 15px;
+		width: 46%;
 		padding: 0 15px;
 		height: 125px;
 		text-align: center;
@@ -39,20 +38,18 @@
 		transition: all linear 0.2s;
 
 		@include md {
-			flex: 0 0 170px;
+			width: 165px;
 			font-size: 1.6rem;
-			padding: 0;
+			padding: 0 5px;
 			height: 170px;
+			margin: 0;
 			font-weight: 700;
 		}
 
 		@include lg {
-			margin-right: 0;
-		}
-
-		@include xl {
-			flex: 0 0 200px;
+			width: 200px;
 			height: 200px;
+			margin-right: 0;
 		}
 
 		&:hover {
@@ -74,5 +71,13 @@
 			transition: all linear 0.2s;
 			fill: $primary-color;
 		}
+	}
+}
+
+.gain-list__title {
+	font-size: 1.3rem;
+
+	@include sm {
+		font-size: 1.5rem;		
 	}
 }
