--- a/src/scss/components/_harmonogram.scss
+++ b/src/scss/components/_harmonogram.scss
@@ -14,6 +14,16 @@
 		margin: 0;
 		padding: 0;
 		flex-basis: 100%;
+		padding: 30px;
+		height: 220px;
+		position: relative;
+		box-shadow: 0 3px 10px 0px rgba(0,0,0,.1);
+		transition: all linear 0.1s;
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+		align-item: center;
+		justify-content: center;
 		@include sm {
 			flex-basis: 50%;		
 		}
@@ -21,40 +31,21 @@
 		@include lg {
 			flex-basis: 33%;		
 		}
-		a {
-			display: block;
-			padding: 30px;
-			height: 220px;
-			position: relative;
-			box-shadow: 0 3px 10px 0px rgba(0,0,0,.1);
-			transition: all linear 0.1s;
-			&:hover {
-				box-shadow: 0 8px 30px 8px rgba(0,0,0,.15);
-				background: $primary-color;
-				color: #fff;
-				text-decoration: none;
-				p,.harmonogram__title,.harmonogram__number {
-					color: #fff;
-				}
 
-				&:after {
-					opacity: 1;
-				}
-			}
-			&:after {
-				content: '';
-				position: absolute;
-				top: 24px;
-				right: 20px;
-				width: 10px;
-				height: 18px;
-				background: url("../img/icon_arrow_white.svg") center bottom no-repeat;
+		&.active {
+			box-shadow: 0 8px 30px 8px rgba(0,0,0,.15);
+			background: $primary-color;
+			color: #fff;
+			text-decoration: none;
+			p,.harmonogram__title,.harmonogram__number {
+				color: #fff;
 			}
 		}
 		p {
 			font-size: 1.4rem;
 			line-height: 25px;
 			margin-bottom: 0;
+			margin-top: 10px;
 		}
 	}
 }
@@ -63,13 +54,13 @@
 	font-size: 1.8rem;
 	color: $primary-color;
 	display: block;
+	text-transform: uppercase;
 }
 
 .harmonogram__number {
 	font-size: 1.8rem;
 	color: black;
 	display: block;
-	margin-bottom: 10px;
 	strong {
 		font-size: 3.6rem;
 		font-weight: 700;
