--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -3,7 +3,10 @@
 .fix-body, .fix-body body {
     overflow: hidden;
     position: relative;
-    height: 100%;
+    // height: 100%;
+    .nav-up {
+    	top: 0;
+    }
 }
 
 .wrapper {
@@ -14,5 +17,18 @@
 .row {
 	@include lg {
 		flex-wrap: nowrap;
+	}
+}
+
+.img-placeholder {
+	position: relative;
+	padding-bottom: 100%;
+
+	img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
