--- a/src/scss/components/_menu-toggle.scss
+++ b/src/scss/components/_menu-toggle.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
     z-index: 1000;
 	border: 1px solid #cccccc;
-	padding: 10px 30px;
+	padding: 10px 30px 8px;
 	border-radius: 30px;
 
     @include md {
