--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -16,7 +16,8 @@
 	align-content: center;
 	align-items: center;
   	justify-content: center;
-  	transition: all linear 0.2s;
+  	opacity: 0;
+  	transition: opacity linear 0.2s;
 
 	@include md {
 		width: auto;
@@ -26,10 +27,12 @@
 		display: block;
 		background: none; 
 		transform: translate3d(0,0,0);
+		opacity: 1
 	}
 
 	&.active {
     	transform: translate3d(0,0,0);
+    	opacity: 1
 	}
 	ul {
 		list-style: none;
