--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -21,14 +21,22 @@
 }
 
 .img-placeholder {
-	position: relative;
-	padding-bottom: 100%;
+	text-align: center;
+	@include sm {
+		text-align: left;
+	}
+	@include md {
+		position: relative;
+		padding-bottom: 100%;
+	}
 
 	img {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		@include md {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
