--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,6 +3,7 @@
 .btn {
 	color: $primary-color;	
 	border: 1px solid $primary-color;
+	background: #fff;
 	border-radius: 30px;
 	padding: 14px 30px 12px;
 	font-weight: 600;
