--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,4 +26,5 @@ $enable-grid-classes:       true;
 @import 'components/_speakers-list.scss';
 @import 'components/_speakers-carousel.scss';
 @import 'components/_harmonogram.scss';
+@import 'components/_certificate.scss';
 
