--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -13,6 +13,12 @@
 	@include lg {
 		height: 800px;
 	}
+
+	.absolventi & {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .hero__content {
@@ -26,6 +32,13 @@
 	@include sm {
 		bottom: 100px;
 	}
+
+	.absolventi & {
+		position: static;
+		bottom: auto;
+		transform: none;
+		left: auto;
+	}
 }
 
 .hero__date {
@@ -37,6 +50,15 @@
 	@include sm {
 		margin-bottom: 55px;
 		font-size: 2.4rem;
+	}
+
+	.absolventi & {
+		@include sm {
+			margin-bottom: 0;
+			font-size: 1.9rem;
+			max-width: 800px;
+			margin: 0 auto;
+		}		
 	}
 }
 
