--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -19,6 +19,13 @@ h1 {
 		margin-bottom: 40px;
 	}
 
+	.absolventi & {
+		@include sm {
+			font-size: 5.2rem;
+			line-height: 60px;
+		}
+	}
+
 	span {
 		display: block;
 		font-size: 1.8rem;
