--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -53,9 +53,11 @@
 	}
 
 	.absolventi & {
+		text-transform: none;
+
 		@include sm {
 			margin-bottom: 0;
-			font-size: 1.9rem;
+			font-size: 2.1rem;
 			max-width: 800px;
 			margin: 0 auto;
 		}		
