Změny na webu 2020 - spolecna fotka, aktualizace absolventu

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -6,6 +6,18 @@
 	background-size: cover;
 	position: relative;
 
+	&:after {
+		position: absolute;
+		content: '';
+		display: block;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: rgba(255,255,255,.85);
+		z-index: 5;
+	}
+
 	@include sm {
 		height: 760px;
 	}
@@ -28,6 +40,7 @@
 	width: 80vw;
 	left: 50%;
 	transform: translateX(-50%);
+	z-index: 10;
 
 	@include sm {
 		bottom: 100px;
