--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,10 +1,11 @@
 // Hero
 
 .hero {
-	height: 500px;
+	height: 650px;
 	background: url("../img/hero-bg.jpg") center no-repeat;
 	background-size: cover;
 	position: relative;
+	z-index: 1;
 
 	&:after {
 		position: absolute;
@@ -19,11 +20,11 @@
 	}
 
 	@include sm {
-		height: 760px;
+		height: 900px;
 	}
 
 	@include lg {
-		height: 800px;
+		height: 850px;
 	}
 
 	.absolventi & {
@@ -69,7 +70,6 @@
 		text-transform: none;
 
 		@include sm {
-			margin-bottom: 0;
 			font-size: 2.1rem;
 			max-width: 800px;
 			margin: 0 auto;
@@ -82,7 +82,6 @@
 	padding: 0;
 	margin: 0;
 	li {
-		margin: 0;
 		padding: 0;
 		display: inline-block;
 		margin: 0 13px;
