--- a/src/scss/components/_speakers-carousel.scss
+++ b/src/scss/components/_speakers-carousel.scss
@@ -1,6 +1,7 @@
 // Speakers carousel
 
-.speakers-carousel {
+.speakers-carousel,
+.speakers-carousel-android {
 	list-style: none;
 	margin: 0;
 	padding: 0;
